some quick data stuff

--- a/preparation/prepare.ipynb
+++ b/preparation/prepare.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'dataset2/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-71ef8e16a051>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'dataset2/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfoldernames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mfoldernames\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.DS_Store'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'dataset2/'"
+     ]
+    }
+   ],
    "source": [
     "dataset = 'dataset2/'\n",
     "foldernames = os.listdir(dataset)\n",
@@ -37,31 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting: ./dataset2/339663/\n",
-      "Extracting: ./dataset2/345923/\n",
-      "Extracting: ./dataset2/346231/\n",
-      "Extracting: ./dataset2/351423/\n",
-      "Extracting: ./dataset2/353891/\n",
-      "Extracting: ./dataset2/354152/\n",
-      "Extracting: ./dataset2/361113/\n",
-      "Extracting: ./dataset2/362946/\n",
-      "Extracting: ./dataset2/363578/\n",
-      "Extracting: ./dataset2/363740/\n",
-      "Extracting: ./dataset2/386348/\n",
-      "Extracting: ./dataset2/386661/\n",
-      "Extracting: ./dataset2/386662/\n",
-      "Extracting: ./dataset2/386800/\n",
-      "Extracting: ./dataset2/386801/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def getDicomArray(refDs, lstFiles):\n",
     "    ConstPixelDims = (len(lstFiles), int(refDs.Rows), int(refDs.Columns))\n",
@@ -149,20 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(users)"
    ]
